# vjay_ace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FX_BrainStorm.md  Makefile  README.md  cmake_install.cmake  key_modifiers.md  png_folder_to_video.py
.github/: copilot-instructions.md
.github/workflows/: main.yml
scripts/: build_windows.ps1
scripts/.github/workflows/: github-actions-demo.yml  main.yml
src/app/: App.h  App.mm  AudioAnalyzer.h  AudioAnalyzer.mm  CapsLockDetector.h  CapsLockDetector.mm  CompositorFactory.h  CompositorFactory.mm  Constants.h  ControlWindow.cpp  ControlWindow.h  FxPatch.cpp  ICompositor.h  LIFNetwork.h  LIFNetwork.mm  LIFToneSynth.cpp  LIFToneSynth.h  LayerManager.cpp  LayerManager.h  MediaPickerWindow.h  MediaPickerWindow.mm  MetalCompositor.h  MetalCompositor.mm  MidiRouter.cpp  MidiRouter.h  PerformanceWindow.cpp  PerformanceWindow.h  PressureControlWindow.cpp  PressureControlWindow.h  StartupOptions.cpp  StartupOptions.h  VideoDecoder.cpp  VideoDecoder.h  main.mm
src/app/shaders/: vjay_shaders.metal
src/app/shaders/aux/: box_blur.metal  brightness_contrast_saturation.metal  chromatic_aberration.metal  color_temperature.metal  datamosh_effect.metal  displacement_map.metal  echo_trails.metal  edge_detect.metal  fisheye.metal  gaussian_blur.metal  hsv_operations.metal  kaleidoscope.metal  mirror.metal  mirror_horizontal.metal  mirror_vertical.metal  motion_blur.metal  noise_distortion.metal  psychedelic_colors.metal  rgb_modulator.metal  rgb_shift.metal  ripple_effect.metal  rotate.metal  scanline.metal  strobe_effect.metal  swirl.metal  vhs_effect.metal  video_glitch.metal  vignette.metal  wave_distortion.metal
src/app/shaders/effects/: block_shuffle.metal  feedback_transform.metal  gaussian_blur_separable.metal  hsv_shift.metal  hue_cycle.metal  lens_distortion.metal  pixelate.metal  rainbow_cycle.metal  sharpen.metal  simple_effects.metal  zoom.metal
src/app/windows/: CompositorFactory_win.cpp  WindowsCompositorD3D11.cpp  WindowsCompositorD3D11.h  WindowsCompositorStub.cpp  WindowsCompositorStub.h  main_win.cpp  main_win_stub.cpp
src/midi_monitor/: MidiMonitor.cpp  MidiMonitor.h  main.cpp
